overflow fix on playground

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -157,6 +157,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    overflow: hidden;
 }
 
 .footer {
